[metadata]
name = osu_replay
version = 0.0.0
description = A module for working with osu! replays (.osr files)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cmyui/osu_replay
author = Josh Smith
author_email = cmyuiosu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[bdist_wheel]
universal = True

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    osu-replay = osu_replay.main:main

[options.packages.find]
exclude =
    tests*
